@@ -1,4 +1,4 @@
-DIST DataGridField-1.5.0.tar.gz 114572 RMD160 da7230fc6d04c4a9f8fb33996a0acc0aa2d748e4 SHA1 8676eb2c16403b126d2e8d921392950e149e641f SHA256 5c7d9ef59492800fe7334aac108dbde35ad1f4d382a241d00482b927dc7c567f
-EBUILD datagridfield-1.5.0.ebuild 487 RMD160 87dd982a13b503bcf889ce06070ad23b6be6970e SHA1 55753bcd9e08d45503b210f7dba5c2396791bf2c SHA256 a3185dd5121173d1ecccd338f3730a52eb2a05a012c67af39c5556df477fc33a
-MISC ChangeLog 372 RMD160 89bd82e51b3dc93508f9e8336bf2e74d2e470470 SHA1 67a9ba5dadbfd23733beca472d1440e736a09cc2 SHA256 9ad79650e7319d52a63fc9950194b345efeddb5f6e341ae2b40cdf7c9b24c527
+DIST datagridfield-1.6.2.zip 86753 RMD160 d124b8a6fe3defae62f828113673e00dc96b6678 SHA1 32fd4ba49f207c370b8258f9e911c389c59b5fb9 SHA256 65303603ffefaba93366c427a83861a37546a6780038a57ce54be779d167988e
+EBUILD datagridfield-1.6.2.ebuild 495 RMD160 0236f884f2f52f13db1e0936a5cb3c72a2f07556 SHA1 53a55788232adec045a3d4c1f343122cf945f88f SHA256 c0aad79195eae67a59736f99e3acc72d8ba05b357f849c61dfd49334bbc16cb2
+MISC ChangeLog 499 RMD160 04e38896c33c7e503a04019993ddd878ac92f728 SHA1 7a218271bef42395d985293a74fb017821c3f5e1 SHA256 cd53518db8ce5358a5aeb41eb387ab14d134bbc023ce0415cee81fea468246fc
 MISC metadata.xml 229 RMD160 f0f6417bec31ce8baba6d476664f7210c8c84c98 SHA1 e5f94f5caadc6f843fc90bb7959570cd503676fd SHA256 3b08fca3c878bdfc4e7639f477dd542d55a4ab5dce39a475e82633071d13eb3f
